--- a/client/bower.json
+++ b/client/bower.json
@@ -27,6 +27,7 @@
     "angular-ui-ace": "bower",
     "angular-bootstrap": "^1.3.2",
     "angular-tree-control": "^0.2.25",
-    "angular-fx": "^1.1.0"
+    "angular-fx": "^1.1.0",
+    "angular-resource": "^1.5.5"
   }
 }
