--- a/client/bower.json
+++ b/client/bower.json
@@ -28,6 +28,8 @@
     "angular-bootstrap": "^1.3.2",
     "angular-tree-control": "^0.2.25",
     "angular-fx": "^1.1.0",
-    "angular-resource": "^1.5.5"
+    "angular-resource": "^1.5.5",
+    "socket.io-client": "^1.4.6",
+    "angular-socket-io": "^0.7.0"
   }
 }
