--- a/client/bower.json
+++ b/client/bower.json
@@ -31,6 +31,7 @@
     "angular-resource": "^1.5.5",
     "socket.io-client": "^1.4.6",
     "angular-socket-io": "^0.7.0",
-    "raphael": "^2.2.0"
+    "raphael": "^2.2.0",
+    "angular-native-dragdrop": "^1.2.1"
   }
 }
