--- a/client/bower.json
+++ b/client/bower.json
@@ -24,14 +24,14 @@
   "dependencies": {
     "angular": "1.4.7",
     "angular-ui-ace": "bower",
-    "angular-bootstrap": "^1.3.2",
-    "angular-tree-control": "^0.2.25",
-    "angular-fx": "^1.1.0",
-    "socket.io-client": "^1.4.6",
-    "angular-socket-io": "^0.7.0",
-    "raphael": "^2.2.0",
-    "angular-native-dragdrop": "^1.2.1",
-    "Ionicons": "ionicons#^2.0.1",
-    "moment": "^2.14.1"
+    "angular-bootstrap": "1.3.2",
+    "angular-tree-control": "0.2.25",
+    "angular-fx": "1.1.0",
+    "socket.io-client": "1.4.6",
+    "angular-socket-io": "0.7.0",
+    "raphael": "2.2.0",
+    "angular-native-dragdrop": "1.2.1",
+    "Ionicons": "ionicons#2.0.1",
+    "moment": "2.14.1"
   }
 }
