--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,9 @@
-flask-restful>=0.3.5
-flask-socketio>=2.2
-Flask-SQLAlchemy>=2.1
-Flask-Bcrypt>=0.7.1
-Flask-Login>=0.3.2
-Flask-WTF>=0.12
-eventlet>=0.19.0
-psutil>=4.3.1
+Flask==0.10.1
+flask-restful==0.3.5
+flask-socketio==2.2
+Flask-SQLAlchemy==2.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.3.2
+Flask-WTF==0.12
+eventlet==0.19.0
+psutil==4.3.1
