--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 flask-restful==0.3.5
 flask-socketio==2.2
 Flask-SQLAlchemy==2.1
+sqlalchemy-utils==0.32.9
 Flask-Bcrypt==0.7.1
 Flask-Login==0.3.2
 Flask-WTF==0.12
