--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,9 @@
+# Section for dependencies that have broken compatibility
+
+Werkzeug==0.16.1
+
+# End Section
+
 Flask==0.10.1
 flask-restful==0.3.5
 flask-socketio==2.2
